@@ -1,3 +1,3 @@
 ## Process this file with automake to produce Makefile.in
 
-EXTRA_DIST = @m4_files@ genacinclude.sh
+EXTRA_DIST = @m4_files@
