@@ -1,3 +1,8 @@
+Tue Sep 19 10:14:32 BST 2000 Olly Betts
+
+	* Include genacinclude.sh in the distribution from the correct
+	  directory.
+
 Mon Sep 18 19:13:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Various work on Quartz - logfiles, putting general structure in
